--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "graphql-request": "^7.4.0",
     "nanostores": "^1.1.0",
     "react": "^19.2.4",
+    "react-aria-components": "^1.15.1",
     "react-dom": "^19.2.4",
     "sharp": "^0.34.5",
     "tailwindcss": "^4.1.18"
