--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^19.2.4",
     "react-aria-components": "^1.15.1",
     "react-dom": "^19.2.4",
+    "react-pay-icons": "^4.0.0",
     "sharp": "^0.34.5",
     "tailwindcss": "^4.1.18"
   },
