--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,6 +47,7 @@ jobs:
           PUBLIC_SHOPIFY_STORE_DOMAIN: ${{ secrets.SHOPIFY_STORE_DOMAIN }}
           PUBLIC_SHOPIFY_STOREFRONT_ACCESS_TOKEN: ${{ secrets.SHOPIFY_STOREFRONT_ACCESS_TOKEN }}
           PUBLIC_STOREFRONT_API_VERSION: "2025-10"
+          PUBLIC_AFFIRM_API_KEY: "VKJNSALGMTLPH973"
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
